// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-cMOycp cpoNsI"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-hBYLEG fKszOV"
    disabled={false}
    size="sm"
  >
    <input
      checked={true}
      className="sc-kwilob dGkMxu"
      id="test-switch-1"
      onChange={[Function]}
      size="sm"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-imZoBe codXWL"
      size="sm"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG chFzCz"
      disabled={false}
      size="md"
    >
      <input
        checked={true}
        className="sc-kwilob dGkMxu"
        id="button-switch-1"
        onChange={[Function]}
        size="md"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe bIZirg"
        size="md"
      >
        <span
          className="sc-iFHmoU leMwYz"
        >
          <p
            className="sc-bndzKH dYTXNY"
          >
            Off
          </p>
          <p
            className="sc-bndzKH dYTXNY"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG jksihw"
      disabled={false}
      size="lg"
    >
      <input
        checked={true}
        className="sc-kwilob dGkMxu"
        id="button-switch-2"
        onChange={[Function]}
        size="lg"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe bIZirg"
        size="lg"
      >
        <span
          className="sc-iFHmoU leMwYz"
        >
          <p
            className="sc-bndzKH dYTXNY"
          >
            Off
          </p>
          <p
            className="sc-bndzKH dYTXNY"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG egSvbj"
      disabled={true}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kwilob dGkMxu"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="sm"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG egSvbj"
      disabled={true}
      size="sm"
    >
      <input
        checked={false}
        className="sc-kwilob dGkMxu"
        id="test-switch-disabled"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-imZoBe iPejPr"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG fYMtwj"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-kwilob jolNjr"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe eMNwuM"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG jkWVKg"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-kwilob ckWRAn"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe zwBcp"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG fKszOV"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kwilob ckWRAn"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe zwBcp"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG fYMtwj"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-kwilob dRleLS"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe iltJZy"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG jkWVKg"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-kwilob dGkMxu"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-hBYLEG fKszOV"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kwilob dGkMxu"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-imZoBe codXWL"
        size="sm"
      />
    </label>
  </div>
</div>
`;
